--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,6 +1,6 @@
 {
     "orgName": "Vyuha",
-    "edition": "Developer",
+    "edition": "Enterprise",
     "settings": {
         "lightningExperienceSettings": {
             "enableS1DesktopEnabled": true
