--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -13,6 +13,7 @@
     "sourceApiVersion": "54.0",
     "packageAliases": {
         "VyuhaForSpire": "0Ho5c0000004CFWCA2",
-        "VyuhaForSpire@0.1.0-3": "04t5c0000014PbhAAE"
+        "VyuhaForSpire@0.1.0-3": "04t5c0000014PbhAAE",
+        "VyuhaForSpire@0.1.0-4": "04t5c0000014PbmAAE"
     }
 }
