--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -14,6 +14,7 @@
     "packageAliases": {
         "VyuhaForSpire": "0Ho5c0000004CFWCA2",
         "VyuhaForSpire@0.1.0-3": "04t5c0000014PbhAAE",
-        "VyuhaForSpire@0.1.0-4": "04t5c0000014PbmAAE"
+        "VyuhaForSpire@0.1.0-4": "04t5c0000014PbmAAE",
+        "VyuhaForSpire@0.1.0-5": "04t5c0000014PoKAAU"
     }
 }
