making apex action properties for query optional

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -15,6 +15,7 @@
         "VyuhaForSpire": "0Ho5c0000004CFWCA2",
         "VyuhaForSpire@0.1.0-3": "04t5c0000014PbhAAE",
         "VyuhaForSpire@0.1.0-4": "04t5c0000014PbmAAE",
-        "VyuhaForSpire@0.1.0-5": "04t5c0000014PoKAAU"
+        "VyuhaForSpire@0.1.0-5": "04t5c0000014PoKAAU",
+        "VyuhaForSpire@0.1.0-6": "04t5c0000014PoPAAU"
     }
 }
