--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -17,6 +17,7 @@
         "VyuhaForSpire@0.1.0-4": "04t5c0000014PbmAAE",
         "VyuhaForSpire@0.1.0-5": "04t5c0000014PoKAAU",
         "VyuhaForSpire@0.1.0-6": "04t5c0000014PoPAAU",
-        "VyuhaForSpire@0.1.0-7": "04t5c0000014QXzAAM"
+        "VyuhaForSpire@0.1.0-7": "04t5c0000014QXzAAM",
+        "VyuhaForSpire@0.1.0-8": "04t5c0000014R9YAAU"
     }
 }
